--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "@types/node": "^17.0.38"
+    "@types/node": "^17.0.38",
+    "axios": "^0.27.2"
   }
 }
